# SideProjectCardsGame

./: Artefact.cpp  Artefact.h  Artefact.json  Bestiary.json  CMakeLists.txt  Card.cpp  Card.h  Event.cpp  Event.h  Events.json  Fight.cpp  Fight.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  cards.json  main.cpp
